--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 style="margin-top: 24px;margin-bottom: 24px;">金城汇</h1>
         <img src="./img/ic_launcher.png" width="200" height="200"/>
         <a href="./download/android/money-android.apk" id="JdownApp" class="btn text">下载安卓应用</a>
-        <a href="itms-services://?action=download-manifest&url=./download/ios/manifest.plist"
+        <a href="itms-services://?action=download-manifest&url=https://jch-invite.github.io/invite-jch/download/ios/manifest.plist"
            id="JdownApp2"
            class="btn text">下载IOS应用</a>
         <p class="text" style="margin-top: 24px;font-size: 36px;">下载完成请返回桌面查看下载结果</p>
